// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utilities: NpmInformation renders 1`] = `
<section>
  <h3>
    Usage with NPM
  </h3>
  <p>
    <Link
      to="/get-started/for-developers/"
    >
      Usage with NPM
    </Link>
     will require you to import it from 
    <CodeTags
      code="@swedbankpay/design-guide"
      type="primary"
    />
    .
  </p>
  <ComponentPreview
    codeFigure={true}
    dangerousHTML={true}
    language="javascript"
  >
    import { 
     } from "@swedbankpay/design-guide"; 
    

    .init()
  </ComponentPreview>
</section>
`;

exports[`Utilities: NpmInformation renders with componentName-prop 1`] = `
<section>
  <h3>
    Usage with NPM
  </h3>
  <p>
    <Link
      to="/get-started/for-developers/"
    >
      Usage with NPM
    </Link>
     will require you to import it from 
    <CodeTags
      code="@swedbankpay/design-guide"
      type="primary"
    />
    .
  </p>
  <ComponentPreview
    codeFigure={true}
    dangerousHTML={true}
    language="javascript"
  >
    import { 
    test
     } from "@swedbankpay/design-guide"; 
    

    test
    .init()
  </ComponentPreview>
</section>
`;
